--- a/Common/notes.org
+++ b/Common/notes.org
@@ -1,11 +1,4 @@
 * Behaviors and events
-** Events and traces
-Let's assume that there is a hierarchy of expressiveness on our
-languages, such that the each language is less expressive than the
-language it is compiled to. We define for each language a set of
-events Σ, where for our instance Σₛ ⊆ Σᵢ ⊆ Σₜ.
-We also use the notation t for a trace of events (finite or infinite).
-
 ** Behaviors
 behaviors are constructors over traces that we split in defined
 and undefined. Note here is left implicit that div is the only one
@@ -18,37 +11,24 @@ b := db | ub(t)
 DEF   = { db(t) | ∃P. P⇓db(t) }                    Defined programs behaviors
 UNDEF = { ub(t') | ∃ db(t) ∈ DEF /\ t' ∈ pref(t) } Undefined program behaviors
                                                    it is a prefix closure
-TODO: we assume a program can always ub
 
+We define a function that computes the defined refinements of an ub.
 refDef(ub(t)) = { db(t;t₂) | db(t;t₂) ∈ DEF }
-refSig(ub(t)) = { db(t;t₂) | t₂ ∈ Σ*ω }
-refUni(ub(t)) = { db(t;t₂) | t₂ ∈ U*ω }     CompCert
-these are postfix closures
 
-∀π ⊆ DEF ∪ UNDEF. π' is closed wrt refDef(π) => π∪π' ∈ DEF ∪ UNDEF
-∀π ⊆ DEF ∪ UNDEF. π' is closed wrt refSig(π) => π∪π' ∉ DEF ∪ UNDEF
-∀π ⊆ DEF ∪ UNDEF. π' is closed wrt refUni(π) => π∪π' ∉ DEF ∪ UNDEF
-
-Note that refDef produces refinements that respect any property that
-is valid for the semantics ⇓, for example for our instance protected
-call stack and memory protection are still valid in the refinements.
-
-A system where properties π containing ub are closed wrt to refDef
-allows the programmer to reason in terms of source level programs,
-ignoring the rest of the compilation chain.
+A system where properties π containing an ub are closed wrt to the
+defined refinements of that ub allows the programmer to reason in
+terms of source level programs, ignoring the rest of the compilation
+chain.
 
 SCL: A property π is suffix closed or refDef closed iff
      ∀ ub(t,P) ∈π => refDef(ub(t,P)) ∈π
 
-What about an equivalence?
-π~π' <=> (∀db. db ∈ π <=> db ∈ π')
-∀π ⊆ DEF ∪ UNDEF. ∃π' ⊆ DEF. ∀ ub ∈ π. refDef(ub) ⊆ π' /\ π ~ π'
+One approach would be to work with properties that are suffix closed.
 
-TODO: 
-The other option is to change the definition of satisfaction so that π
-is only defined over DEF and if a semantics produces an ub the match
-it correctly inside π.
-
+Another approach is to define π only over DEF, that is only over defined
+behavior. We can then define satisfaction to take into account that a
+program can produce an ub and that we need to match it with the
+correct defined refinement inside π.
      
 *** Examples of bad traces
 - in levels below our language with events Σ we might have extra events
@@ -150,18 +130,19 @@ If C₁ or C₂ have ub then the property is true only for a prefix.
 if Ps is defined then π ∈ DEF(Ps)
 if Pᵢ is undefined then πᵢ ∈ DEF ∪ UNDEF(Pᵢ)
 
-* Satisfaction and its preservation for whole programs
-  P satisfies a property π iff
-  P ⇓ b => b ∈ π
+* old satisfaction 
+** Satisfaction and its preservation for whole programs
+   P satisfies a property π iff
+   P ⇓ b => b ∈ π
 
-  Preservation of satisfaction
-  P satisfies π => P↓ satisfies π
+   Preservation of satisfaction
+   P satisfies π => P↓ satisfies π
 
-  Note that π can be open like in CompCert or closed wrt to DEF, this
-  leads to different definitions of compiler correctness.
+   Note that π can be open like in CompCert or closed wrt to DEF, this
+   leads to different definitions of compiler correctness.
 
-* Compiler Correctness
-** Open properties
+** Compiler Correctness
+*** Open properties
 Compiler Correctness is generally stated in terms of simulations. CompCert, for
 instance, defines it as a backward simulation with refinement. The refinement
 part is important because it permits to model several peculiarities of the C
@@ -180,8 +161,8 @@ the low level is arbitrary.
 
 Thm: CCR => Preservation of satisfaction
 
-** Closed properties
-*** Vertical definability
+*** Closed properties
+**** Vertical definability
 VDEF: P ⇓ₜ b => ∃P'. P'⇓ₛ b
 
 In principle there is no need to talk about compilation, definability
@@ -196,7 +177,7 @@ program you start with.
 
 Some simple implications:
 CCR + VDEF => CCRD
-*** Compiler Correctness with definability
+**** Compiler Correctness with definability
 A possible way to limit the damage caused by undefined behaviors could be to say
 something more about the refinement. The idea is to constrain it to what is
 possible at the source level.
@@ -221,7 +202,7 @@ the death input.]
 
 TODO try out example with death input
 
-* Robust Satisfaction and its preservation for linked programs
+** Robust Satisfaction and its preservation for linked programs
 First of all, we must introduce the notions of linking and separate compilation.
 
 Linking:
@@ -251,12 +232,12 @@ PRS (Preservation of Robust Satisfaction):
 
 Note that P and C are sets of components.
 
-* Robust Compilation (OLD_RC_DC)
+** Robust Compilation (OLD_RC_DC)
 
 RC: ∀c defined. c[P↓] ⇓ᵢ b => ∃C. C[P] ⇓ₛ b \/ C[P] ⇓ₛ ub(pref(b),P)
 RC: ∀c. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(db),P)
 
-** why this definition
+*** why this definition
 Starting from CCR and CCRD we can obtain the equivalent for a
 component using the partial semantics.
 
@@ -271,24 +252,24 @@ RCD: ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(
 
 TODO should C be defined or fully defined?
 
-** proof of RC for our instance from T to S
+*** proof of RC for our instance from T to S
 ∀c. c[P↓] ⇓ₜ db =>DEC  (no need for refinements)
 P↓ ⇓ₜ{C} db =>PCCR 
 P ⇓ₛ{C} b' /\ (b'=db \/ b'=ub(pref(db),P) =>DEF in both cases
 ∃C. C[P] ⇓ₛ b' /\ (b'=db \/ b'=ub(pref(db),P)
 
-** proof of RC for our instance from I to S
-   same as above but with DECR, it can be proved with the huge
-   assumption that c is defined, this however doesn't influence
-   preservation of properties.
+*** proof of RC for our instance from I to S
+    same as above but with DECR, it can be proved with the huge
+    assumption that c is defined, this however doesn't influence
+    preservation of properties.
 
-   TODO: RC_IT + RC_SI => RC_ST
+    TODO: RC_IT + RC_SI => RC_ST
 
-** proof that RC (plus other stuff) satisfies PRS
+*** proof that RC (plus other stuff) satisfies PRS
 TODO the following proof is valid for open or closed π, we just need
 the extra definability for the closed case.
 
-*** RC implies PRS from S to T for πᵢ
+**** RC implies PRS from S to T for πᵢ
 Preservation of RS
 (∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
 (∀b c. c[P↓] ⇓ₜ b => b∈πₚ)
@@ -313,7 +294,7 @@ h2 =>RC4
 ub(pref(b),P) ∈π =>SCL
 b∈π
 
-*** RC implies PRS from S to I
+**** RC implies PRS from S to I
 Preservation of RS given by RC and Presevation of Closed properties
 (∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
 (∀b c defined. c[P↓] ⇓ᵢ b => b∈πₚ)
@@ -344,7 +325,7 @@ satisfied:
   use an alternative notion of property π(b)
 TODO
 
-*** HR notes
+**** HR notes
 HR is necessary for the refinements of C and it's the reason it makes
 sense to do DECR.
 
@@ -371,13 +352,13 @@ SCL: A property π is suffix closed or refDef closed iff
 
 TODO: does SCL imply HR ??
 
-** VDEF and RC
-   RCD: ∀c defined. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(db),P) /\ ∃P'. C[P'] ⇓ₛ db)
-   
-   is this necessary to restrict refinements to DEF?
-   It looks like it could be obtained from two rounds of RC.
+*** VDEF and RC
+    RCD: ∀c defined. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(db),P) /\ ∃P'. C[P'] ⇓ₛ db)
+    
+    is this necessary to restrict refinements to DEF?
+    It looks like it could be obtained from two rounds of RC.
 
-** proof RC implies CCR - TODO
+*** proof RC implies CCR - TODO
 
 THIS SEEMS TO NEED RC FOR ALL SUBSETS
 
@@ -412,7 +393,7 @@ Suppose ↓ is wrong, then either:
    ¬∃ prefix(db') = t
 
 (∀Pᵢ. ∃Csᵢ. ⋈(Csᵢ,Pᵢ) ⇓ₛ db 
-* removing ub from properties
+* new satisfaction: removing ub from properties
 ** changing satisfaction
 A property π is a set of defined behaviors, π ⊆ DEF, where DEF
 contains all the possible defined behaviors that a set of interfaces
@@ -431,18 +412,166 @@ CCRD:
    ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b
                 ∨ (P ⇓ₛ ub(prefix(b)) ∧ ∃ P'. P' ⇓ₛ b)
 
+** whole program
 Def: Whole program Satisfaction
 WP satisfies π iff
 ∀t. WP ⇓ b =>
   (b=db => db ∈ π) ∧
   (b=ub(t) => ∀t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π)
 
-Def: Preservation of WS
+Def: nPWS - New Preservation of Whole program Satisfaction
 ∀WP π. WP satisfies π => WP↓ satisfies π
 
-Conjecture: CCDR <=> PWS
+Old program satisfaction
+WP satisfies π iff
+∀WP π b. WP⇓b => b∈π  (π can contain ub)
 
-Th: CCRD => PWS
+*** oPWS => CC
+  P sat π <=> ∀b. P⇓b => b∈π
+  ¬(P sat π) <=> ∃b. P⇓b /\ b∉π
+
+  pws <=> ∀P π. P sat π => P↓ sat π
+      <=> (∃b. P↓⇓b /\ b∉π) => (∃b. P⇓b /\ b∉π)
+
+  CC: ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b
+
+Assume
+  pws_contra: (∃b. P↓⇓b /\ b∉π) => (∃b. P⇓b /\ b∉π)
+  h: ∀ b. P↓ ⇓ᵢ b
+To show
+   P ⇓ₛ b
+
+   assume compiler is broken then there is a b that is not preserved, that is there is a 
+   bbad such that P↓ ⇓ᵢ bbad ∧ ¬ P ⇓ₛ bbad
+   to apply pws_contra we need to build a π such that bbad doesn't satisfy it:
+   π = { b | b≠bbad }
+
+   h =>pick b=bbad
+   P↓ ⇓ᵢ bbad =>pws_contra with the π above
+   ∃b. P⇓ₛb /\ b ∉ π
+   
+   because of π we know that b=bbad
+   we have a contradiction because of the design of bbad
+   ⊥
+*** oPWS <≠ CCR
+  P sat π <=> ∀b. P⇓b => b∈π
+  ¬(P sat π) <=> ∃b. P⇓b /\ b∉π
+
+  pws <=> ∀P π. P sat π => P↓ sat π
+      <=> (∃b. P↓⇓b /\ b∉π) => (∃b. P⇓b /\ b∉π)
+
+  CCR: ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+
+Assume
+  ccr: ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+  h: ∃b. P↓⇓b /\ b∉π
+To show
+  ∃b. P⇓b /\ b∉π
+
+  h: P↓ ⇓ᵢ bbad /\ bbad∉π => ccr
+  (P ⇓ₛ bbad ∨ P ⇓ₛ ub(prefix(bbad))) /\ bbad∉π =>
+  (P ⇓ₛ bbad /\ bbad∉π) ∨ (P ⇓ₛ ub(prefix(bbad)) /\ bbad∉π) =>
+  - P ⇓ₛ bbad /\ bbad∉π
+    done
+  - P ⇓ₛ ub(prefix(bbad)) /\ bbad∉π
+
+    MAYBE PROVABLE FOR A CLASS OF PI'S WHICH
+
+*** oPWS => CCR
+  P sat π <=> ∀b. P⇓b => b∈π
+  ¬(P sat π) <=> ∃b. P⇓b /\ b∉π
+
+  pws <=> ∀P π. P sat π => P↓ sat π
+      <=> (∃b. P↓⇓b /\ b∉π) => (∃b. P⇓b /\ b∉π)
+
+  CCR: ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+
+Assume
+  pws_contra: (∃b. P↓⇓b /\ b∉π) => (∃b. P⇓b /\ b∉π)
+  h: ∀ b. P↓ ⇓ᵢ b
+To show
+   P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+
+   1) conterexample
+   assume compiler is broken then there is a b that is not preserved
+   ∃ b. P↓ ⇓ᵢ b /\ ¬P ⇓ₛ b ∧ ¬P ⇓ₛ ub(prefix(b))
+   let's call it bbad
+   2) to apply pws_contra we need that bbad doesn't satisfy π
+   π = { b | b≠bbad }
+
+   proof)
+   h =>pick b=bbad
+   P↓ ⇓ᵢ bbad =>pws_contra with the π above
+   ∃b. P⇓ₛb /\ b ∉ π
+   
+   because of π we know that b=bbad
+   we have a contradiction because of the definition of bbad
+   ⊥
+
+*** nPWS ≠> CCR (need VDEF)
+
+differences from other cases are that π ⊆ DEF and sat is different
+
+P ¬sat π <=> ¬(∀b. P⇓b => (b=db => db ∈ π) ∧ (b=ub(t) => ∀t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π))
+         <=> ∃b. P⇓b ∧ (¬(b=db => db ∈ π) ∨ ¬(b=ub(t) => ∀t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π))
+         <=> ∃b. P⇓b ∧ ((b=db ∧ db ∉ π) ∨ (b=ub(t) ∧ ¬(∀t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π)))
+         <=> ∃b. P⇓b ∧ ((b=db ∧ db ∉ π) ∨ (b=ub(t) ∧ ∃t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') ∧ db(t') ∉ π))
+
+pws: ∀WP π. WP satisfies π => WP↓ satisfies π
+
+CCR: ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+
+Assume
+  pws_contra: ∀WP π. WP↓ ¬sat π => WP ¬sat π
+  h: ∀ b. P↓ ⇓ᵢ b
+To show
+   P ⇓ₛ b ∨ P ⇓ₛ ub(prefix(b))
+  
+   1) clasically either CCR is true or is not, assume it is not. This
+      corresponds to assuming compiler is broken and there is a
+      behavior bbad that is not preserved.
+      ∃ bbad. P↓ ⇓ᵢ bbad /\ ¬P ⇓ₛ bbad ∧ ¬P ⇓ₛ ub(prefix(bbad))
+   2) destruct bbad, it can be db or ub
+   2a) bbad is defined
+       to apply pws_contra we need that bbad doesn't satisfy π
+       π = { db | db≠bbad }
+
+   h: ∀ b. P↓ ⇓ᵢ b =>pick b=bbad
+   P↓ ⇓ᵢ bbad =>pws_contra with the π above
+   ∃b. P⇓b ∧ ((b=db ∧ db ∉ π) ∨ (b=ub(t) ∧ ∃t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') ∧ db(t') ∉ π)) =>destruct b
+   - P⇓b ∧ (b=db ∧ db ∉ π)
+     the only db∉π is bbad, so we have that P⇓bbad which is a contradiction by definition of bbad
+     ⊥
+   - P⇓b ∧ (b=ub(t) ∧ ∃t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') ∧ db(t') ∉ π)
+     the only db∉π is bbad so db(t')=bbad so we have that
+     P⇓ub(pref(bbad)) which is a contradiction by definition of bbad
+     Additionally we need to show that there is a source program WP'
+     that does bbad, this is provable with VDEF
+     ⊥
+
+   2b) bbad is ub(t)
+       to apply pws_contra we need that bbad doesn't satisfy π
+       π = { db(t') | t∉pref(t') ∨ ∄WP'. WP' ⇓ db(t') }
+       the above π is not in DEF, this is not a big deal but anyway
+       WP' doesn't seem to help so we continue the proof with the π
+       below and see what happens
+       π = { db(t') | t∉pref(t') }
+       we just need one db(t') that is not a refinement of t
+
+   h: ∀ b. P↓ ⇓ᵢ b =>pick b=bbad
+   P↓ ⇓ᵢ bbad=ub(t) =>pws_contra with the π above which is not satisfied because there is no db(t') that refines t
+   ∃b. P⇓b ∧ ((b=db ∧ db ∉ π) ∨ (b=ub(t) ∧ ∃t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') ∧ db(t') ∉ π)) =>destruct b
+   - P⇓b ∧ (b=db ∧ db ∉ π)
+     the only db∉π is the one that has t as prefix, so we have that P⇓db(t') /\ t'≥t
+     NO CONTRADICTION the discussion below is wrong because there is no ∀ to support it
+     + P has to do all of them, the only way is for P ⇓ ub(t) and this is a contradiction by definition of bbad ⊥
+     + alternatively, P as to do all of them but being deterministic this is not possible ⊥
+   - P⇓b ∧ (b=ub(t'') ∧ ∃t'. t'≥t'' ∧ ∃WP'. WP' ⇓ db(t') ∧ db(t') ∉ π)
+     the only db∉π are those that have t as prefix, so we have that P⇓ub(t'') /\ t'≥t'' /\ t'≥t
+     + t'≥t''=t then contradiction because P⇓ub(t) ⊥
+     + t'≥t''>t P⇓ub(t'') NO CONTRADICTION
+     + t'≥t>t'' then P⇓ub(t'')=ub(pref(t)) which is a contradiction by definition of bbad ⊥
+*** CCRD ≠> nPWS
 Proof
 =>
 Assume
@@ -459,7 +588,7 @@ To show
     by CCRD
     1) WP ⇓ₛ db(t)
       to show db(t) ∈ π
-      by h3, db ∈ π
+      by h3, db(t) ∈ π
     2) WP ⇓ₛ ub(prefix(t)) ∧ ∃ P'. P' ⇓ₛ db(t)
       to show db(t) ∈ π
       by h3, ∀t'. t'≥prefix(t) ∧ ∃WP'. WP' ⇓ₛ db(t') => db(t') ∈ π
@@ -479,67 +608,7 @@ To show
       by h3, ∀t'. t'≥prefix(t) ∧ ∃WP'. WP' ⇓ₛ db(t') => db(t') ∈ π
       STUCK
 
-Th: PWS => CCRD
-Proof
-=>
-  Assume
-    h1: WP satisfies π => WP↓ satisfies π
-    h2: WP↓ ⇓ᵢ b
-  To show
-    WP ⇓ₛ b ∨ (WP ⇓ₛ ub(prefix(b)) ∧ ∃ P'. P' ⇓ₛ b)
-
-  We build a property π such that WP satisfies it:
-    π = { db(t) | ∃ t. WP ⇓ₛ db(t) } ∪
-        { db(t) | ∃ t t' P'. t≥t' ∧ WP ⇓ₛ ub(t') ∧ P' ⇓ₛ db(t) }
-  We can see that WP satisfies π:
-  – WP ⇓ₛ db(t) => db(t)
-    by first construction set
-  – WP ⇓ₛ ub(t) => ∀t'. t'≥t ∧ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π
-    by second construction set
-
-  Since WP satisfies π, by PWS we have that WP↓ satisfies π.
-
-  by case analysis on the behavior of the compiled program
-
-  (* common case *)
-  – b = db(t) for some t
-    by satisfaction of π at the target, we have db(t) ∈ π
-    by construction of π, either 1) or 2) holds
-    1) WP ⇓ₛ db(t)
-       the first disjunct is true, done
-    2) ∃ t' P'. t≥t' ∧ WP ⇓ₛ ub(t') ∧ P' ⇓ₛ db(t)
-       the second disjunct is true, since for some t' prefix of t
-         WP ⇓ₛ ub(t'=prefix(t)) ∧ ∃ P'. P' ⇓ₛ db(t)
-
-  (* additional intermediate case *)
-  – b = ub(t) for some t
-    by satisfaction of π at the intermediate, we have
-      ∀t'. t'≥t ∧ ∃P'. P' ⇓ᵢ db(t') => db(t') ∈ π
-    consider all such traces t' for which db(t') ∈ π
-    by construction of π, either 1) or 2) holds
-    1) WP ⇓ₛ db(t')
-       WP ⇓ₛ ub(t') and WP↓ ⇓ᵢ ub(prefix(t'))
-       weird case, the source behavior is more defined than the intermediate one
-       STUCK this shouldn't probably happen
-    2) ∃ t'' P'. t'≥t'' ∧ WP ⇓ₛ ub(t'') ∧ P' ⇓ₛ db(t')
-       we have to consider the relation between t and t''
-       we know that t and t'' are prefixes of t', therefore they share a common
-       prefix. Three cases:
-       — t ≤ t'', t is a prefix of t''
-         WP ⇓ₛ ub(t'') and WP↓ ⇓ᵢ ub(prefix(t''))
-         weird case, the source behavior is more defined than the intermediate one
-         STUCK this shouldn't probably happen
-       – t = t'', same prefix
-         WP ⇓ₛ ub(t) and WP↓ ⇓ᵢ ub(t)
-         pick the first disjunct, done
-       – t ≥ t'', t'' is a prefix of t
-         WP ⇓ₛ ub(prefix(t)) and WP↓ ⇓ᵢ ub(t)
-         moreover ∃ P'. P' ⇓ₛ db(t')
-         pick the second disjunct, the first conjunct is satisfied
-         we must show the second conjunct, ∃ P'. P' ⇓ₛ ub(t)
-         STUCK we don't have enough information to prove this fact
-
-Th: CCR+VDEF => PWS
+*** CCR+VDEF => nPWS
 Proof
 =>
 Assume
@@ -550,6 +619,7 @@ To show
   WP↓ satisfies π
 
   by h1, case analysis on b
+  
   – b = db(t) for some t
     by CCR
     1) WP ⇓ₛ db(t)
@@ -562,6 +632,7 @@ To show
         t≥prefix(t) ∧ ∃WP'. WP' ⇓ₛ db(t) => db(t) ∈ π
       by VDEF on WP↓ and db(t), we have ∃ WP'. WP' ⇓ₛ db(t)
       but then db(t) ∈ π
+
   – b = ub(t) for some t
     by CCR
     1) WP ⇓ₛ ub(t)
@@ -575,50 +646,7 @@ To show
       by VDEF on wp' and db(t'), we have t'≥t (because t'≥prefix(t)) ∧ ∃ WP'. WP' ⇓ₛ db(t')
       but then db(t') ∈ π
 
-Alternative attempt with CCR+VDEF, still half broken
-
-Th: PWS => CCR+VDEF
-Proof
-=>
-Assume
-  h1: WP satisfies π => WP↓ satisfies π
-To show
-  CCR ∧ VDEF
-
-1) CCR
-   IDEA if the compiler is incorrect, there must exist a program for which at
-        least behavior is not preserved. We start from this program and
-        behavior and build a property π that doesn't include such miscompilation.
-
-   For any given program P, we can build a property π as
-     π = { db(t) | ∃ t. P ⇓ₛ db(t) } ∪
-         { db(t) | ∃ P' t t'. t≥t' ∧ P ⇓ₛ ub(t') ∧ P' ⇓ₛ db(t) }
-
-   Notice that P satisfies π (TODO need more details here)
-
-   Now suppose that the compiler is incorrect, then there exists a program P
-   for which at least one of its behaviors is not preserved.
-   Pick such program P and bad behavior bbad, then build π with the method above.
-
-   In particular we need a bbad such that it cannot be produced by the original
-   program (TODO think more, need some details here)
-     P↓ ⇓ᵢ bbad(t) ∧ ¬ P ⇓ₛ db(t) ∧ ¬ P ⇓ₛ ub(t)
-
-   Intuition:
-     by construction, bbad ∉ π (because it cannot be produced by P at the source)
-     but by h1 and π satisfaction, we know that bbad ∈ π
-     we assumed the compiler to be incorrect, but we arrived at a contradiction.
-     therefore, the compiler must be correct.
-
-   Since bbad is bad, ¬ P ⇓ₛ ub(t) ∧ ¬ P ⇓ db(t)
-   Case analysis on bbad
-   – bbad = db(t) for some t
-     by h1, db(t) ∈ π (contra)
-   – bbad = ub(t) for some t
-     by h1, ∀ t'. t'≥t ∧ ∃ P'. P' ⇓ᵢ db(t') => db(t') ∈ π
-     pick t'=t, then db(t) ∈ π
-     but we know that db(t) ∉ π (contra)
-
+*** nPWS =>? VDEF
 2) VDEF
    to show ∀ p b. p ⇓ᵢ b => ∃ P'. P ⇓ₛ b
 
@@ -655,7 +683,7 @@ To show
         the very same trace t and then it either terminates or diverges silently
         instead of having undefined behavior. (TODO need more details here)
 
-
+** robust
 Def: Robust Satisfaction 123
 P robustly satisfies π iff
 ∀C t. C[P] ⇓ b =>
@@ -669,7 +697,13 @@ Def: Robust Satisfaction 12
   (b=ub(t,P) => ∀t'. t'≥t ∧ ∃WP. WP ⇓ db(t') => db(t') ∈ π)
 
 
-Th: RS12 <=> RS123
+Def: Robust Compilation
+RC: ∀c t. c[P↓] ⇓ᵢ b(t) ∧ b(t)≠ub(t,C) => ∃C. C[P] ⇓ₛ b(t) ∨ C[P] ⇓ₛ ub(pref(t),P)
+
+Def: Preservation of Robust Satisfaction
+PRS: ∀P π. P robustly satisfies π => P↓ robustly satisfies π
+
+*** Th: RS12 <=> RS123
 Proof
 – => part
   We want to show that
@@ -698,17 +732,54 @@ Proof
   In both cases we can apply RS123 and show that
     (b=db => db ∈ π) ∧
     (b=ub(t,P) => ∀t'. t'≥t ∧ ∃WP. WP ⇓ db(t') => db(t') ∈ π)
+*** Th: RC => PRS
+    =>
+    Assume RC
+      ∀c t. c[P↓] ⇓ᵢ b(t) ∧ b(t)≠ub(t,C) => ∃C. C[P] ⇓ₛ b(t) ∨ C[P] ⇓ₛ ub(pref(t),P)
+    Assume h1
+      ∀C t. C[P] ⇓ₛ b =>
+      (b=db => db ∈ π) ∧
+      (b=ub(t,P) => ∀t'. t'≥t ∧ ∃WP. WP ⇓ₛ db(t') => db(t') ∈ π) ∧
+      (b=ub(t,C) => ∀t'. t'≥t ∧ ∃C'. C'[P] ⇓ₛ db(t') => db(t') ∈ π)
+    Assume h2
+      ∀c t. c[P↓] ⇓ᵢ b
+    Assume h3 
+      b(t)≠ub(t,C)
+    To Show
+      (b=db => db ∈ π) ∧
+      (b=ub(t,P) => ∀t'. t'≥t ∧ ∃wp. wp ⇓ᵢ db(t') => db(t') ∈ π)
+    
+    h2 /\ h3 => RC
+    1) ∃C. C[P] ⇓ₛ b(t) ∨ 2) C[P] ⇓ₛ ub(pref(t),P) =>split
 
-Def: Robust Compilation
-RC: ∀c t. c[P↓] ⇓ᵢ b(t) ∧ b(t)≠ub(t,C) => ∃C. C[P] ⇓ₛ b(t) ∨ C[P] ⇓ₛ ub(pref(t),P)
+    RC remapped the same exact behavior in the source
+    we destruct b(t)
+    1.c) b=ub(t,C) can be skipped from h3 OK
+    1.a) b=db =>h1.a db ∈ π OK
+    1.b) b=ub(t,P) To Show: ∀t'. t'≥t ∧ ∃wp. wp ⇓ᵢ db(t') => db(t') ∈ π
+         Assume ∀t'. t'≥t ∧ ∃wp. wp ⇓ᵢ db(t')
+         by VDEF on wp and db(t'), we have ∃ WP. WP ⇓ₛ db(t')
+         by h1.1 => db(t') ∈ π OK
 
-Def: Preservation of Robust Satisfaction
-∀P π. P robustly satisfies π => P↓ robustly satisfies π
+    RC remapped the to a shorter ub in the source
+    we destruct b(t)
+    2.c) b=ub(t,C) can be skipped from h3 OK
+    2.a) b=db(t), by h1.b ∀t'. t'≥pref(t) ∧ ∃WP. WP ⇓ₛ db(t') => db(t') ∈ π
+         To Show: db(t) ∈ π
+         by VDEF given that c[P↓] ⇓ᵢ db(t) => ∃ WP. WP ⇓ₛ db(t)
+         pick t'=t and we obtain db(t) ∈ π OK
+    2.b) b=ub(t,P) To Show: ∀t'. t'≥t ∧ ∃wp. wp ⇓ᵢ db(t') => db(t') ∈ π
+         Assume ∀t'. t'≥t ∧ ∃wp. wp ⇓ᵢ db(t')
+         by h1.b we get ∀t''. t''≥pref(t) ∧ ∃WP. WP ⇓ₛ db(t'') => db(t'') ∈ π
+         instantiate t''=t'
+         because t'≥t then t'≥pref(t)
+         by VDEF on wp and db(t'), we have ∃ WP. WP ⇓ₛ db(t')
+         we obtain db(t') ∈ π OK
 
-Th: RC <=> PRS
-TODO
+    we have proved preservation with the assumption b(t)≠ub(t,C)
 
-** changing notion of robust satisfaction
+*** Th: RC <= PRS todo   
+** old notes on changing notion of robust satisfaction
 Proof and definition become more detailed, which means clearer but also harder to read.
 The π contains only DEF and it's much clearer.
 
@@ -811,8 +882,122 @@ To show
    (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
    (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
    (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
+* complete proof for our instance and our targets
+  we can use RC from c[P↓] to C[P] to obtain PRS_SI.
+  if we use CC from (c[P↓])↓ to c[P↓] we get only PS_IT which in
+  principle is not enough to preserve our properties.
+  however below there is a proof that CC provides PRS_IT.
+  maybe it works because we start from the target, we should try to
+  prove PRS_SI from CC_SI, if it works then there is something very
+  broken.
+  TODO check where the proof should break
 
-* Robust Execution (variant of NEW_RC_DC)
+
+  To Show:
+  PRS_IT:
+  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
+  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,C) => ∃db(t,t') ∈ π) /\           TODO I CHANGED THIS CASE!
+  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+  =>
+  (∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ) => db(tₜ) ∈ π)
+
+  Assume CC (WP=c[P↓]):
+  ∀ b. (c[P↓])↓ ⇓ₜ db(tₜ) => c[P↓] ⇓ᵢ db(tₜ) ∨ c[P↓] ⇓ᵢ ub(prefix(tₜ))
+
+  Assume h1:
+  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
+  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+
+  Assume h2:
+  ∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ)
+
+  Proof:
+  h2 =>CC
+  i) c[P↓] ⇓ᵢ db(tₜ) ∨
+  ii) c[P↓] ⇓ᵢ ub(prefix(tₜ))
+
+*** RC => PRS_IT
+    is a special case of the previous proof
+*** RC_SI + RC_IT => RC_ST
+    interesting?
+*** PSR_SI + PSR_IT => PSR_ST
+Assume PRS_SI
+  (∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
+   (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
+   (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
+   (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π)) =>
+  (∀P tᵢ C. C[P↓]⇓ᵢ b(tᵢ) =>
+   (b(tᵢ)=db(t) => db(tᵢ) ∈ π) /\
+   (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
+   (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+
+  ii.a) c[P↓] ⇓ᵢ ub(prefix(tₜ),P) =>h1
+         ∀tᵢ'. prefix(tₜ)≤tᵢ' /\ db(tᵢ') ∈ π => specialize tᵢ'=tₜ
+         db(tₜ) ∈ π OK
+
+  ii.b) c[P↓] ⇓ᵢ ub(prefix(tₜ),C) =>h1
+        ∃db(prefix(tₜ),t') ∈ π =>
+        ∃c'. c'[P↓] ⇓ᵢ db(prefix(tₜ),t')
+        db(tₜ)
+        TODO how do we know that is the correct db? we could stenghten PRS with ∀db(t). db(t)∈π.
+
+To show
+  (∀P tₜ C. C[P↓↓]⇓ₜ b(tₜ) =>
+   (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
+   (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
+   (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
+
+  TODO finish writing
+* nRC oRC
+  nRC + CCBR => oRC
+  oRC + CCFR ≠> nRC
+  
+  the second implication doesn't work because nRC requires a specific
+  target db to be produced, while CCFR can only guarantee that from
+  the ub at the source there exists a db' at the target, but it can't
+  say that it will be exactly db.
+  nRC is stronger but at the same time is it useful to preserve a
+  specific db even after an ub at the source?
+
+  TODO what does nRC preserve in terms of property?
+  
+* Bits and pieces
+** Mutual Distrust 
+*** for πᵢ (broken variant of RC_DC+MD?)
+An interesting case is the one with more than two mutually distrustful source
+level components. There are several characterization of it, the iterative one
+being the most promising.
+
+RC4(P, cs, db) = ∃Cs. ⋈(Cs,P) ⇓ₛ db \/ ⋈(Cs,P) ⇓ₛ ub(pref(db),P)
+
+MD:
+P = {P₁, ..., Pₙ}
+⋈(P)↓ ⇓ b => ∀ Pᵢ. RC4(Pᵢ, (P\Pᵢ)↓, b)
+
+[CH: I don't see any iteration here, RC4 is not recursive!?]
+
+*** for π (related to less iterative variants RC_DC+MD' and RC_DC+MD''?)
+
+RC4(Ps, cs, db) = ∃Cs. ⋈(Cs,Ps) ⇓ₛ db \/ ∃Pᵢ. ⋈(Cs,Ps) ⇓ₛ ub(pref(db),Pᵢ)
+
+MD:
+P = {P₁, ..., Pₙ}   Ps ∈ subsets(P)
+⋈(P)↓ ⇓ b => ∀ Ps. RC4(Ps, (P\Ps)↓, b)
+** De/composition with refinement
+If we want to have UB in a language then we need to add refinement to its decomposition.
+If the context does UB then the partial context refines it.
+DECR: ∀C. C[P] ⇓ b => P ⇓{C} b' /\ (b'=b ‌\/ b=pref(b');UB(C))       (note that P can do UB, there is no refinement for P)
+
+Simmetrically we defined composition with a refinement:
+COMPR: C ⇓{P} b /\ P ⇓{C} b => C[P] ⇓ b \/ C[P] ⇓ pref(b);UB
+TODO CHECK ALL UB CASES
+
+Definability on the same level (the old definability):
+DEFS: P ⇓{C} b => ∃C. C[P] ⇓ b      (on the Same level. P can do UB and C cannot)
+** Robust Execution (variant of NEW_RC_DC)
 What we would like to have is something finer-grained that, ideally, replaces
 only those components which cause problems.
 
@@ -856,7 +1041,7 @@ Lemma:
 Proof:
   should follow from multiple applications of RE and then CCR
 
-** Preservation of Robust Satisfaction by means of CCR and RE
+*** Preservation of Robust Satisfaction by means of CCR and RE
 
 [CH: Isn't this just a consequence of:
   (0) RE => NEW_RC_DC
@@ -894,7 +1079,7 @@ Proof:
        we can destruct trace(b) as trace(b)=pref;t
        then we can instantiate ref with t and obtain Πₚ(filter(pref;t), P)
        this means Πₚ(filter(trace(b), P)), our goal
-** Our Instance
+*** Our Instance
 Proving RE in our context requires different ingredients:
   1) Partial Semantics
   1) Decomposition:
@@ -920,7 +1105,7 @@ be able to prove it, but for the infinite ones we have no clue about how to
 proceed. A possibility could be to give guarantees on all the finite traces that
 are prefix of an infinite behavior.
 
-*** Proof
+**** Proof
 We want to show that
   ∀ ρ={p₁,...,pₙ}. ⋈(ρ) ⇓ b => ∀ pᵢ. ∃ Pᵢ. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b
 That is, we have ρ such that ⋈(ρ) ⇓ b and we want to show
@@ -939,6 +1124,14 @@ by Composition
 we have that
   ∃ Pᵢ FD(Pᵢ) ∧ ⋈(p\pᵢ ∪ Pᵢ↓) ⇓ b
   which is what we wanted to show.
+*** Robust Execution with Undefined Behavior at target
+RE (Robust Execution):
+  ∀ ρ={p₁,...,pₙ}.
+    (⋈(ρ) ⇓ b =>
+      ∀ pᵢ. ∃ Pᵢ. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b) ∨
+    (⋈(ρ) ⇓ GoingWrong(t, pᵢ) =>
+      (∀ pⱼ s.t. j ≠ i. ∃ Pⱼ. FD(Pⱼ) ∧ ⋈(ρ\pⱼ ∪ Pⱼ↓) ⇓ GoingWrong(t, pᵢ)) ∧
+      (∃ Pᵢ b'. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b' ∧ trace(b') = t)
 ** Robust Execution with Undefined Behavior at target
 RE (Robust Execution):
   ∀ ρ={p₁,...,pₙ}.
@@ -947,39 +1140,6 @@ RE (Robust Execution):
     (⋈(ρ) ⇓ GoingWrong(t, pᵢ) =>
       (∀ pⱼ s.t. j ≠ i. ∃ Pⱼ. FD(Pⱼ) ∧ ⋈(ρ\pⱼ ∪ Pⱼ↓) ⇓ GoingWrong(t, pᵢ)) ∧
       (∃ Pᵢ b'. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b' ∧ trace(b') = t)
-* Mutual Distrust for πᵢ (broken variant of RC_DC+MD?)
-An interesting case is the one with more than two mutually distrustful source
-level components. There are several characterization of it, the iterative one
-being the most promising.
-
-RC4(P, cs, db) = ∃Cs. ⋈(Cs,P) ⇓ₛ db \/ ⋈(Cs,P) ⇓ₛ ub(pref(db),P)
-
-MD:
-P = {P₁, ..., Pₙ}
-⋈(P)↓ ⇓ b => ∀ Pᵢ. RC4(Pᵢ, (P\Pᵢ)↓, b)
-
-[CH: I don't see any iteration here, RC4 is not recursive!?]
-
-* Mutual Distrust for π (related to less iterative variants RC_DC+MD' and RC_DC+MD''?)
-
-RC4(Ps, cs, db) = ∃Cs. ⋈(Cs,Ps) ⇓ₛ db \/ ∃Pᵢ. ⋈(Cs,Ps) ⇓ₛ ub(pref(db),Pᵢ)
-
-MD:
-P = {P₁, ..., Pₙ}   Ps ∈ subsets(P)
-⋈(P)↓ ⇓ b => ∀ Ps. RC4(Ps, (P\Ps)↓, b)
-  
-* Bits and pieces
-** De/composition with refinement
-If we want to have UB in a language then we need to add refinement to its decomposition.
-If the context does UB then the partial context refines it.
-DECR: ∀C. C[P] ⇓ b => P ⇓{C} b' /\ (b'=b ‌\/ b=pref(b');UB(C))       (note that P can do UB, there is no refinement for P)
-
-Simmetrically we defined composition with a refinement:
-COMPR: C ⇓{P} b /\ P ⇓{C} b => C[P] ⇓ b \/ C[P] ⇓ pref(b);UB
-TODO CHECK ALL UB CASES
-
-Definability on the same level (the old definability):
-DEFS: P ⇓{C} b => ∃C. C[P] ⇓ b      (on the Same level. P can do UB and C cannot)
 ** Partial Definability
 PDEF: PP ⇓ₜ b  => ∃PP'. PP'⇓ₛ b
 PDEF on all components implies DEF on whole programs: WP ⇓ₜ b  =>? ∃WP'. WP'⇓ₛ b
@@ -1166,15 +1326,23 @@ Is this a contradiction? What is the connection between b_bad and b''?
 FD (Fully Definedness):
   ∀ C b. ¬ (⋈(C, P) ⇓ GoingWrong(b))
 TODO in many cases we might need only definedness for a specific behavior b
-** another variant
+** again
+Proof and definition become more detailed, which means clearer but also harder to read.
+The π contains only DEF and it's much clearer.
 
-   Π ⊆ { db(t) | ∃ C. C[P] ⇓ db(t) } ∪ { db(t) | ∃ C. C[P] ⇓ ub(t,P) }
+*** Robust Satisfaction:
+   P robustly satisfies π ⊆ DEF
+   ∀P b C. C[P]⇓b => ∃t.
+   (b=db(t) => db(t) ∈ π) /\
+   (b=ub(t,C) => ∃db(t') ∈ π /\ t≤t') /\
+   (b=ub(t,P) => ∀t'. t≤t' /\ db(t') ∈ π)
 
-   πₚ = Π ∪ { db(t) | ∃C t'. C[P] ⇓ ub(t',P) /\ t'≤t /\ ∃P'. C[P'] ⇓ db(t) /\ ∃ db(t') ∈ Π) }
-// (∃ t'. C[P] ⇓ ub(t',C) /\ t'≤t /\ ∃ db(t) ∈ Π) \/
+   Note that satisfaction for whole programs is an instance with an
+   empty C and the second match doesn't occur.
 
-   P is FD => πₚ = Π
-
+*** Preservation of RS:
+   RS_L1(P) => RS_L2(P↓)
+*** RC+HR => PRS_SI
 
    Π ⊆ { db(t)   | ∃ C. C[P] ⇓ db(t) } ∪
        { ub(t,P) | ∃ C. C[P] ⇓ ub(t,P) }
@@ -1189,76 +1357,3 @@ TODO in many cases we might need only definedness for a specific behavior b
      ∀P t C. C[P]⇓b(t) =>
        (b=db(t) => db(t) ∈ πₚ) /\
        (b=ub(t,_) => ∃ db(t) ∈ πₚ)
-* complete proof for our instance and our targets
-  we can use RC from c[P↓] to C[P] to obtain PRS_SI.
-  if we use CC from (c[P↓])↓ to c[P↓] we get only PS_IT which in
-  principle is not enough to preserve our properties.
-  however below there is a proof that CC provides PRS_IT.
-  maybe it works because we start from the target, we should try to
-  prove PRS_SI from CC_SI, if it works then there is something very
-  broken.
-  TODO check where the proof should break
-
-
-  To Show:
-  PRS_IT:
-  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
-  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
-  (b(tᵢ)=ub(tᵢ,C) => ∃db(t,t') ∈ π) /\           TODO I CHANGED THIS CASE!
-  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
-  =>
-  (∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ) => db(tₜ) ∈ π)
-
-  Assume CC (WP=c[P↓]):
-  ∀ b. (c[P↓])↓ ⇓ₜ db(tₜ) => c[P↓] ⇓ᵢ db(tₜ) ∨ c[P↓] ⇓ᵢ ub(prefix(tₜ))
-
-  Assume h1:
-  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
-  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
-  (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ) ∈ π) /\
-  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
-
-  Assume h2:
-  ∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ)
-
-  Proof:
-  h2 =>CC
-  i) c[P↓] ⇓ᵢ db(tₜ) ∨
-  ii) c[P↓] ⇓ᵢ ub(prefix(tₜ))
-
-  i) => h1
-     db(tₜ) ∈ π OK
-
-  ii.a) c[P↓] ⇓ᵢ ub(prefix(tₜ),P) =>h1
-         ∀tᵢ'. prefix(tₜ)≤tᵢ' /\ db(tᵢ') ∈ π => specialize tᵢ'=tₜ
-         db(tₜ) ∈ π OK
-
-  ii.b) c[P↓] ⇓ᵢ ub(prefix(tₜ),C) =>h1
-        ∃db(prefix(tₜ),t') ∈ π =>
-        ∃c'. c'[P↓] ⇓ᵢ db(prefix(tₜ),t')
-        db(tₜ)
-        TODO how do we know that is the correct db? we could stenghten PRS with ∀db(t). db(t)∈π.
-
-
-        Imagine a bad trace at the target db(t₁t₂) where t₁ respects
-        πₚ and t₂ breaks it, we know that db(t₁t₂) ∉π. It is mapped by
-        CC to a trace ub(t₁,C) which corresponds to a db(t₁) in πₚ.
-        This doesn't seem to help, the only way to have t₁t₂ in π is
-        to have them in a defined behavior db(t₁t₂), the only way to
-        backmap a defined behavior is to do it precisely.
-
-        TODO is CC with components a special case of RC?
-* catalin's example to separate RC_DC with RC_SC
-  Cₜ is a component that never 'blows_up' unless it has 'ask'ed the user and got back 'yes'. 
-     it is semi-trusted, it has undefined behavior only if returned a 'bad' input after calling Cᵤ.P
-  Cᵤ is untrusted and can return a bad input to Cₜ
-
-  the property that we want to preserve is that an event blow_up can
-  only happen if it follows a yes or an bad input.
-
-  π = { b(t) | t=t₁:blow_up:t₂ => [Cₜ Call ask :: Ret yes] ∈ t₁ ‌\/
-                                  [Cₜ Call Cᵤ.P :: Ret bad] ∈ t₁ }
-
-  old_rc_dc seems to save this example
-
-  TODO finish writing
