Complete the Linear Return Capability MicroPolicy implemetation.

--- a/MicroPolicies/TODO
+++ b/MicroPolicies/TODO
@@ -1,6 +1,8 @@
-μP
 behaviours/events
 instruction set
 integration
+compiler
 tests
-licence/provenance/dependencies
+licence
+provenance/credits
+dependencies
