Fix wayward comment before code release

--- a/I2MP/TODO
+++ b/I2MP/TODO
@@ -1,5 +1,5 @@
 Ask Nora about CompStateMonad
 label generation
-WTF about buffers "value + nat"
+issue about buffers "value + nat"
 
 use (val ...) to coerce
