--- a/MicroPolicies/TODO
+++ b/MicroPolicies/TODO
@@ -1,31 +1,18 @@
 
-Typecheck a call to step with all the parameters
-
-question: HOW TO RUN/TEST IT?
-question: WHAT ABOUT MEMORY ALLOCATION?
-
 integration: behaviours/events
 question: are they mandatory for now (just seeking for an execution) ?
           maybe we can leave that for later as we are primarily interested in execution ?
 
 integration: remove Utils.v and use the files in Lib?
-integration: fmap -> coqutils or Common?
+             remove Tmp.v in I2MP as well
 
 integration: modules interface for RC instance?
              but is it relevant? cf linking problems
+
 question: should I stick to Arthur's file organisation
           or progressivelly match the rest of the repo (CS.v, Machine.v, etc.)?
           Arthur's answer: it hasn't been very much thought of anyway, it is a mess?
           hard to give a clear answer
           anyway it has been modified
 
-tests
-licence
-provenance/credits
-dependencies
-
-
-
-===
-integer representation (current not efficient, like not runnable)
-cf instruction encoding
+provenance/credits (micro-policies-coq repo)
